Revision history for libeio

TODO: maybe add mincore support? available on at least darwin, solaris, linux, freebsd
TODO: openbsd requites stdint.h for intptr_t - why posix?

1.0
        - readdir: correctly handle malloc failures.
        - readdir: new flags argument, can return inode
          and possibly filetype, can sort in various ways.
        - readdir: stop immediately when cancelled, do
          not continue reading the directory.
        - fix return value of eio_sendfile_sync.
        - include sys/mman.h for msync.
	- added EIO_STACKSIZE.
	- added msync, mtouch support (untested).
        - added sync_file_range (untested).
        - fixed custom support.
        - use a more robust feed-add detection method.
	- "outbundled" from IO::AIO.
        - eio_set_max_polltime did not properly convert time to ticks.
        - tentatively support darwin in sendfile.
        - fix freebsd/darwin sendfile.
        - also use sendfile emulation for ENOTSUP and EOPNOTSUPP
          error codes.
        - add OS-independent EIO_MT_* and EIO_MS_* flag enums.
        - add eio_statvfs/eio_fstatvfs.
        - add eio_mlock/eio_mlockall and OS-independent MCL_* flag enums.
