@@ -29,7 +29,6 @@ typedef int ssize_t;
 #include <windows.h>
 #include <pthread.h>
 #define sigset_t int
-#define sigfillset(a)
 #define pthread_sigmask(a,b,c)
 #define sigaddset(a,b)
 #define sigemptyset(s)
